[package]
name = "wasm-build"
version = "0.1.0"
authors = ["William Lundstedt <bananavice@gmail.com>"]

[workspace]
members = [
    "crates/wasm-build-support"
]

[dev-dependencies]
wasm_build_test = { path = "./crates/wasm-build-test" }

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
clap = "*"
wasm_build_support = { path = "./crates/wasm-build-support" }
wasm_build_test = { path = "./crates/wasm-build-test" }
